fixed CSS vertical align bug for class 'subsection'

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ div {
 
 .subsection {
     display: inline-block;
+    vertical-align: top;
     width: 250px;
 }
 
